namespace java org.wso2.carbon.event.processor.core.internal.ha.thrift.exception

exception NotAnActiveMemberException {
    1: required string message
}

exception InternalServerException {
    1: required string message
}